# Test-Task

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
src/: config.py  database.py  main.py  models.py  server.py
src/services/answers/: answer_router.py  answer_schema.py  answer_service.py
src/services/answers/data/: answer_repository.py
src/services/questions/: question_router.py  question_schema.py  question_service.py
src/services/questions/data/: question_repository.py
tests/: test_questions.py
